Fix mobile content overlap

--- a/RockWeb/Themes/church_ccv_External_v7/Styles/theme.less
+++ b/RockWeb/Themes/church_ccv_External_v7/Styles/theme.less
@@ -63,6 +63,20 @@
 // Rock Hacks (should probably be changed in core)
 // -------------------------
 
+// Mobile fixes
+.picker-person .picker-menu.dropdown-menu {
+  position: relative;
+  @media @sm {
+    position: absolute;
+  }
+}
+#cms-admin-footer {
+  position: relative;
+  @media @sm {
+    position: fixed;
+  }
+}
+
 legend {
   display: block;
   width: 100%;
